CB-8677 Fix FreeIPA HA in GCP
1. FreeIPA HA setup uses link-local IP address as a forwarder which does not work in GCP.
2. To make it work we need to enable MULTI_IP_SUBNET while creating the image https://cloud.google.com/vpc/docs/create-use-multiple-interfaces#i_am_having_connectivity_issues_when_using_a_netmask_that_is_not_32
3. This change will enable us to test the FreeIPA HA in GCP.